# Key_distribution

./: .firebaserc  .gitignore  README.md  firebase.json  firestore.rules  package-lock.json  package.json  test.ts  testGetKey.js  testRevokeKey.js
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
docs/: goals.md
functions/: .gitignore  package-lock.json  package.json
functions/src/: index.ts
proto/: kvstore.proto
rust_backend/: Cargo.toml  build.rs  deploy.sh  instancesIP.env  node-a.env  node-b.env  node-c.env  setup.sh
rust_backend/src/: lib.rs  main.rs
rust_backend/src/kv/: mod.rs
rust_backend/src/rpc/: mod.rs
rust_backend/src/telemetry/: mod.rs
rust_backend/testing/: main.rs
